--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   injectable: ^2.5.0
   get_it:
+  dio: ^5.8.0+1
+  flutter_gen_runner: ^5.11.0
 
 
 flutter_launcher_icons:
@@ -65,6 +67,12 @@ dev_dependencies:
   # add build runner if not already added  
   build_runner: 
 
+
+
+flutter_gen:
+  output: lib/assets/gen/ # Optional (default: lib/gen/)
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -79,6 +87,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+
+
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
